applying sonarqube to fix defects